  - made POM scanning namespace aware. Dependencies were not detected if project.xml had schema definition in the project element
  - added support for "ejb-client" dependency type
  - added echo for detected snapshot dependencies
  - added support for build.properties or other similiar properties file which contains key=value tags to replace ${key} type strings in project.xml 

P4
----------------------
* Command to correct for server time wasn't using the optional values such as the port (CC-469). Reported by Terri Paik
* Fix problem where very short interval time (30 seconds) was causing system to run out of file handles. Fix by Jared Richardson

Project
----------------------
* Add requireModifications and forceOnly attributes (CC-501). Patch by Chris Erskine

PropertyLabelIncrementer
----------------------
* Add attribute "defaultlabel" which is returned when property file doesn't exist (CC-470).

PVCS
----------------------
* Add support for multiline comments (CC-440). Patch by Scott Heaberlin

SCPPublisher
----------------------
* Add attribute "executableName" to specify alternative executable.

StreamPumper
----------------------
* Log if consuming line fails (CC-199).  Reported by Kaloyan Enimanev.

SVN
----------------------
* Reset modified property to null if no modifications. Patch by Paul Hammant
* Remove race condition on closing error stream.
* Surround dates with single quotes (CC-447).  Patch by Marco Tedone.

UCM
----------------------
* Skip rmbranch and rmver events (CC-430). Patch by Olga Bondarchuk

VSS
----------------------
* Asterisks in comments no longer cause StringIndexOutOfBoundsException (CC-461).  Reported by Omair-Inam Abdul-Matin

reporting application
======================

buildresults.xsl
----------------------
* Comment out javadoc.xsl since the information is already in the errors and warnings section.

index.jsp
----------------------
* Fix invalid comment syntax in index.jsp (CC-486). Reported by Andy Stevens